--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
   "license": "GPL-3.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com//bra1n/townsquare.git"
+    "url": "https://github.com/kildarewolney/townsquare.git"
   }
 }
